# Project-Agent-Bourne

./: .gitignore  Dockerfile  README.md
backend/: .pre-commit-config.yaml  Dockerfile  Pipfile.backup  celery.py  common_utils.py  docker-compose.yml  pyproject.toml  requirements.txt  sample.env
backend/action/service/: action_service.py
backend/agent/: agent_schema.py  agents_config.yaml  apps.py  async_run_task.py  run_task.py
backend/agent/models/: __init__.py  artifact_detail_model.py  pydantic_schema.py  step_detail_model.py  task_detail_model.py
backend/agent/service/: agent_service.py  task_service.py
backend/client/: client_schema.py  test_client_detail_model.py
backend/client/fixtures/: client_detail.json
backend/client/migrations/: 0001_initial.py
backend/client/models/: client_detail_model.py
backend/client/pydantic_models/: client_pydantic_model.py
backend/client/repos/: client_detail_repo.py
backend/client/service/: client_service.py
backend/llm/: apps.py
backend/main/: consumers.py  jwt_authentication_middleware.py  main_schema.py  routing.py  urls.py  views.py  wsgi.py
backend/main/models/: __init__.py  base_model.py
backend/main/settings/: jinja2.py  settings.py
backend/memory/weaviate/: client.py
backend/outputs/: role-0.json  role-1.json  role-2.json  role-3.json  role-4.json  tasks.json
backend/plan/service/: plan_service.py
backend/tool/: apps.py
backend/user/: apps.py  constant.py  test_user_detail_model.py  user_schema.py
backend/user/models/: __init__.py  (+1 more)
backend/workspace/: test_workspace_detail_model.py
(+52 files in other folders)
